feat(admin):added admin weekly service
